Fixed line-breaks in ingredients

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,11 @@
     color: black;
   }
 
+  pre {
+    font-family: 'Poppins', sans-serif;
+    color: black;
+  }
+
   .recipeCard {
    margin-left: 2rem;
     //height: 75vh;
